--- a/Faker.conf
+++ b/Faker.conf
@@ -2,18 +2,18 @@
     "name": "Faker脚本集合",
     "description": "7/22更新 已传某大佬备份,TG群jdscrip.",
     "task": [  
-    	"21 9 * * * https://ghproxy.com/https://raw.githubusercontent.com/smiek2221/scripts/master/gua_MMdou.js, tag=MM领京豆, enabled=true",
-    	"18 0-23/2 * * * https://ghproxy.com/https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_wealth_island.js, tag=财富大陆, enabled=true",
-    	"30 11 * * * https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, tag=特物Z|万物皆可国创, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
-    	"15 0,6,13,19,21 * * * https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, tag=京享值PK, enabled=true",
-    	"15 6 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_DrawEntrance.js, tag=天天优惠大乐透,  enabled=true",
-		"0 6 * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okGetauth.js, tag=OK语音获取auth, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
-	       "0-59/6 8-14 * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okyuyin.js, tag=OK语音, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
-	       "1 8,12,18 * * *  https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, tag=京东口袋书店, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
-	       "57 59 9  * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_europeancup.js, tag=京东欧洲狂欢杯, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
-	       "20 12,14 * * * https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hwsx.js, tag=京东好物上新, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true",
-	       "0 11 * * * https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_lsj.js, tag=京东零食街, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true",
-			 "10 0,20 * * * https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_necklace.js, tag=京东点点券photonmang修复版, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
+cron "21 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/smiek2221/scripts/master/gua_MMdou.js, tag=MM领京豆, enabled=true,
+cron "18 0-23/2 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_wealth_island.js, tag=财富大陆, enabled=true,
+cron "30 11 * * * https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_superBrand.js, tag=特物Z|万物皆可国创, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
+cron "15 0,6,13,19,21 * * * https://raw.githubusercontent.com/hyzaw/scripts/main/ddo_pk.js, tag=京享值PK, enabled=true",
+cron "15 6 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_DrawEntrance.js, tag=天天优惠大乐透,  enabled=true",
+cron "0 6 * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okGetauth.js, tag=OK语音获取auth, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
+cron "0-59/6 8-14 * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/other/okyuyin.js, tag=OK语音, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
+cron "1 8,12,18 * * *  https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, tag=京东口袋书店, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
+cron "57 59 9  * * * https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_europeancup.js, tag=京东欧洲狂欢杯, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/wen.png, enabled=true",
+cron "20 12,14 * * * https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hwsx.js, tag=京东好物上新, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true",
+cron "0 11 * * * https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_lsj.js, tag=京东零食街, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Youthsongs/QuanX/master/pic/ningmeng.png, enabled=true",
+cron "10 0,20 * * * https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_necklace.js, tag=京东点点券photonmang修复版, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
 	       "0 0-16/8 * * * https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy_reward.js, tag=京东宠汪汪兑换photonmang修复版, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
 	       "15 0-23/2 * * * https://ghproxy.com/https://raw.githubusercontent.com/photonmang/quantumultX/master/JDscripts/jd_joy.js, tag=京东宠汪汪photonmang修复版, img-url=https://ghproxy.com/https://raw.githubusercontent.com/Orz-3/mini/master/Color/jd.png, enabled=true",
 	       "8 8 12 * * * https://ghproxy.com/https://raw.githubusercontent.com/ziye888/JavaScript/main/Task/jddsh.js, tag=京东待收货, img-url=https://ghproxy.com/https://raw.githubusercontent.com/sngxpro/QuanX/master/pic/ziye.png, enabled=true",
