--- a/Faker.conf
+++ b/Faker.conf
@@ -8,3 +8,4 @@ cron "57 59 9  * * *" script-path=https://ghproxy.com/https://raw.githubusercont
 cron "20 12,14 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_hwsx.js, tag=京东好物上新, enabled=true,
 cron "0 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_lsj.js, tag=京东零食街, enabled=true,
 cron "0 9,12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true,
+cron "0 1,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, tag=京喜工厂plus, enabled=true",
