--- a/Faker.conf
+++ b/Faker.conf
@@ -7,44 +7,44 @@ cron "20 12,14 * * *" script-path=https://ghproxy.com/https://raw.githubusercont
 cron "0 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_lsj.js, tag=京东零食街, enabled=true
 cron "0 9,12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true
 cron "0 1,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, tag=京喜工厂plus, enabled=true
-cron "30 10 8 * * * https://ghproxy.com/https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/jddj.js, tag=京东到家, enabled=true
-cron "0 9 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=京东赚赚, enabled=true
-cron "0 9,12,18 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true
-cron "0 1,18 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, tag=京喜工厂plus, enabled=true
-cron "10 * * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, tag=京喜工厂助力+参团, enabled=true
-cron "30 0 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/ddxw.js, tag=东东小窝, enabled=true
-cron "0 * * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/dd_factory.js, tag=东东工厂, enabled=true
-cron "5 5 * * * https://ghproxy.com/https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, tag=泡泡大作战, enabled=true
-cron "10 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, tag=🐶京小超领蓝币, enabled=true
-cron "11 1 * * * https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, tag=京东抽奖机, enabled=false
-cron "11 0 * * * https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, tag=京东排行榜, enabled=false
-cron "1 9 * * * https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_products_detail.js, tag=工厂商品, enabled=true
-cron "0 * * * * https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd.js, tag=京喜财富岛, enabled=true
-cron "2 9 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_change.js, tag=京豆变动通知, enabled=true
-cron "10 7 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_home.js, tag=领京豆额外奖励, enabled=true
-cron "0 0 0 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_blueCoin.js, tag=东东超市兑换奖品, enabled=true
-cron "1 8,12,18 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bookshop.js, tag=口袋书店, enabled=true
-cron "10 7 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_car.js, tag=京东汽车, enabled=true
-cron "0 0 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_car_exchange.js, tag=京东汽车兑换, enabled=true
-cron "10 * * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_dreamFactory.js, tag=京喜工厂, enabled=true
-cron "5 6-18/6 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_fruit.js, tag=东东农场, enabled=true
-cron "20 13 * * 6 https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_get_share_code.js, tag=获取互助码, enabled=true
-cron "10 * * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jdfactory.js, tag=东东工厂, enabled=true
-cron "10 0 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jdzz.js, tag=京东赚赚, enabled=true
-cron "15 0-23/2 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy.js, tag=京东宠汪汪, enabled=true
-cron cron "15 0-23/1 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_feedPets.js, tag=京东宠汪汪喂食, enabled=true
-cron "0 0-16/8 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_reward.js, tag=京东宠汪汪积分兑换奖品, enabled=true
-cron "15 10 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_run.js, tag=京东宠汪汪邀请助力与赛跑助力, enabled=true
-cron "10 0-21/3 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_steal.js, tag=京东宠汪汪偷好友积分与狗粮, enabled=true
-cron "0 9,12,18 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jxnc.js, tag=京东京喜农场, enabled=true
-cron "15 6-18/6 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_pet.js, tag=京东东东萌宠, enabled=true
-cron "1 7-21/2 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_plantBean.js, tag=京东种豆得豆, enabled=true
-cron "10 0 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_shop.js, tag=京东进店领豆, enabled=true
-cron "16 22 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_small_home.js, tag=京东东东小窝, enabled=true
-cron "8 0-23/3 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_speed.js, tag=京东天天加速, enabled=true
-cron "11 * * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_superMarket.js, tag=京东东东超市, enabled=true
-cron "10 7 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_syj.js, tag=京东赚京豆, enabled=true
-cron "55 23 * * * https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_unsubscribe.js, tag=取关京东店铺商品, enabled=true
-cron "0 6 * * * https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js, tag=京东点点券史蒂夫修复版, enabled=true
-cron "0 6 * * * https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js, tag=京东京喜工厂开团, enabled=true
+cron "30 10 8 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/jddj.js, tag=京东到家, enabled=true
+cron "0 9 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=京东赚赚, enabled=true
+cron "0 9,12,18 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true
+cron "0 1,18 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, tag=京喜工厂plus, enabled=true
+cron "10 * * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, tag=京喜工厂助力+参团, enabled=true
+cron "30 0 0 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/ddxw.js, tag=东东小窝, enabled=true
+cron "0 * * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/dd_factory.js, tag=东东工厂, enabled=true
+cron "5 5 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/799953468/Quantumult-X/master/Scripts/JD/jd_paopao.js, tag=泡泡大作战, enabled=true
+cron "10 0 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_collectBlueCoin.js, tag=🐶京小超领蓝币, enabled=true
+cron "11 1 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, tag=京东抽奖机, enabled=false
+cron "11 0 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, tag=京东排行榜, enabled=false
+cron "1 9 * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_products_detail.js, tag=工厂商品, enabled=true
+cron "0 * * * * script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd.js, tag=京喜财富岛, enabled=true
+cron "2 9 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_change.js, tag=京豆变动通知, enabled=true
+cron "10 7 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_home.js, tag=领京豆额外奖励, enabled=true
+cron "0 0 0 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_blueCoin.js, tag=东东超市兑换奖品, enabled=true
+cron "1 8,12,18 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bookshop.js, tag=口袋书店, enabled=true
+cron "10 7 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_car.js, tag=京东汽车, enabled=true
+cron "0 0 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_car_exchange.js, tag=京东汽车兑换, enabled=true
+cron "10 * * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_dreamFactory.js, tag=京喜工厂, enabled=true
+cron "5 6-18/6 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_fruit.js, tag=东东农场, enabled=true
+cron "20 13 * * 6 script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_get_share_code.js, tag=获取互助码, enabled=true
+cron "10 * * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jdfactory.js, tag=东东工厂, enabled=true
+cron "10 0 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jdzz.js, tag=京东赚赚, enabled=true
+cron "15 0-23/2 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy.js, tag=京东宠汪汪, enabled=true
+cron "15 0-23/1 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_feedPets.js, tag=京东宠汪汪喂食, enabled=true
+cron "0 0-16/8 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_reward.js, tag=京东宠汪汪积分兑换奖品, enabled=true
+cron "15 10 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_run.js, tag=京东宠汪汪邀请助力与赛跑助力, enabled=true
+cron "10 0-21/3 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_joy_steal.js, tag=京东宠汪汪偷好友积分与狗粮, enabled=true
+cron "0 9,12,18 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_jxnc.js, tag=京东京喜农场, enabled=true
+cron "15 6-18/6 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_pet.js, tag=京东东东萌宠, enabled=true
+cron "1 7-21/2 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_plantBean.js, tag=京东种豆得豆, enabled=true
+cron "10 0 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_shop.js, tag=京东进店领豆, enabled=true
+cron "16 22 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_small_home.js, tag=京东东东小窝, enabled=true
+cron "8 0-23/3 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_speed.js, tag=京东天天加速, enabled=true
+cron "11 * * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_superMarket.js, tag=京东东东超市, enabled=true
+cron "10 7 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_syj.js, tag=京东赚京豆, enabled=true
+cron "55 23 * * * script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_unsubscribe.js, tag=取关京东店铺商品, enabled=true
+cron "0 6 * * * script-path=https://raw.githubusercontent.com/qqsdff/script/main/jd/jd_necklace.js, tag=京东点点券史蒂夫修复版, enabled=true
+cron "0 6 * * * script-path=https://raw.githubusercontent.com/star261/jd/main/scripts/star_dreamFactory_tuan.js, tag=京东京喜工厂开团, enabled=true
 
