--- a/Faker.conf
+++ b/Faker.conf
@@ -2,8 +2,6 @@ cron "21 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.
 cron "1 8,12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/chinnkarahoi_jd_bookshop.js, tag=京东口袋书店, enabled=true
 cron "57 59 9  * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/Wenmoux/scripts/wen/jd/jd_europeancup.js, tag=京东欧洲狂欢杯, enabled=true
 cron "0 11 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/panghu999/panghu/master/jd_lsj.js, tag=京东零食街, enabled=true
-cron "0 9,12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true
-cron "0 1,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory_component.js, tag=京喜工厂plus, enabled=true
 cron "30 10 8 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/GoodHolidays/Scripts/master/Task/jddj.js, tag=京东到家, enabled=true
 cron "0 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=京东赚赚, enabled=true
 cron "0 9,12,18 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_nc.js, tag=京喜农场, enabled=true
@@ -11,10 +9,9 @@ cron "0 1,18 * * *" script-path=https://ghproxy.com/https://raw.githubuserconten
 cron "10 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, tag=京喜工厂助力+参团, enabled=true
 cron "30 0 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/ddxw.js, tag=东东小窝, enabled=true
 cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/dd_factory.js, tag=东东工厂, enabled=true
-cron "11 1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, tag=京东抽奖机, enabled=false
-cron "11 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, tag=京东排行榜, enabled=false
+cron "11 1 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js, tag=京东抽奖机, enabled=true
+cron "11 0 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js, tag=京东排行榜, enabled=true
 cron "1 9 * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_products_detail.js, tag=工厂商品, enabled=true
-cron "0 * * * *" script-path=https://ghproxy.com/https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd.js, tag=京喜财富岛, enabled=true
 cron "2 9 * * *" script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_change.js, tag=京豆变动通知, enabled=true
 cron "10 7 * * *" script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_bean_home.js, tag=领京豆额外奖励, enabled=true
 cron "0 0 0 * * *" script-path=https://raw.githubusercontent.com/shufflewzc/faker2/main/jd_blueCoin.js, tag=东东超市兑换奖品, enabled=true
